<resources>
    <string name="app_name">Hinova</string>
    <string name="login_title">Login</string>
    <string name="login_cpf">CPF</string>
    <string name="login_password">Password</string>
    <string name="login_new_account_text">Don\'t have an account?</string>
    <string name="login_register">Register</string>
    <string name="login_logo_hinova_description">Logo Hinova</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tab_text_1">Oficina</string>
    <string name="tab_text_2">Indique um amigo</string>
    <string name="workshop">Oficinas</string>
    <string name="invite">Indicação</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="friend_name">Nome do Amigo</string>
    <string name="friend_email">E-mail do Amigo</string>
    <string name="friend_phone">Telefone do Amigo</string>
    <string name="friend_invite">Convidar amigo</string>
    <string name="invite_a_friend_text">Preencha os dados para convidar um amigo</string>
</resources>